--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "ldrs": "^1.0.2",
     "lucide-react": "^0.414.0",
+    "luxon": "^3.4.4",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
@@ -56,6 +58,7 @@
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.51.11",
     "@types/bcrypt": "^5.0.2",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
