--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:migrate:deploy": "prisma migrate deploy",
-    "prisma:studio": "prisma studio",
-    "prisma:seed": "node prisma/seed.js"
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
     "@auth/core": "^0.34.1",
