--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@auth/core": "^0.34.1",
     "@auth/prisma-adapter": "^2.4.1",
+    "@aws-sdk/client-s3": "^3.617.0",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.17.0",
     "@radix-ui/react-accordion": "^1.2.0",
