--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@auth/core": "^0.34.1",
     "@auth/prisma-adapter": "^2.4.1",
     "@aws-sdk/client-s3": "^3.617.0",
+    "@aws-sdk/s3-request-presigner": "^3.617.0",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.17.0",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -24,6 +25,7 @@
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.0",
