--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "crons": [
     {
       "path": "/api/daily-stats-cron",
-      "schedule": "0 18 30 * *"
+      "schedule": "30 18 * * *"
     }
   ]
 }
