--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.2.0",
     "ldrs": "^1.0.2",
     "lucide-react": "^0.414.0",
     "luxon": "^3.4.4",
